--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
 .top {
     position: fixed;
     background-color:#303030;
@@ -10,7 +10,7 @@
     top: 0px;
     left: 0px;
     text-align: center;
-    font-size: x-large;
+    font-size: xx-large;
     display: inline-block;
     font-family: 'Montserrat', sans-serif;
 }
@@ -19,7 +19,7 @@
     color:#e9e9e9;
     padding: 0%;
     border-radius: 0px;
-    top: 0px;
+    top: 10px;
     left: 0px;
     text-align: center;
     font-size: x-large;
@@ -31,6 +31,7 @@ body {
     background-color:#111111;
     color:#ffffff;
 }
-t {
-    font-family: 'Comfortaa', cursive;
+p {
+    font-family: 'Baloo 2', cursive;
+    font-size:x-large;
 }
