--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 .top {
     position: fixed;
     background-color:#303030;
-    width:100%;
+    width: 250%;
     color:#fafafa;
     padding: 0%;
     border-radius: 0px;
@@ -33,5 +33,5 @@ body {
 }
 p {
     font-family: 'Baloo 2', cursive;
-    font-size:x-large;
+    font-size: 80%;
 }
