--- a/style.css
+++ b/style.css
@@ -1,30 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 .top {
     position: fixed;
     background-color:#303030;
-    width: 250%;
+    width: 100%;
     color:#fafafa;
     padding: 0%;
     border-radius: 0px;
     top: 0px;
     left: 0px;
     text-align: center;
-    font-size: xx-large;
+    font-size: 5em;
     display: inline-block;
     font-family: 'Montserrat', sans-serif;
+    height:4em;
+    margin: auto;
+}
+.centertext {
+    top: 25%;
+    transform: translateY(-25%);
 }
 .faketop {
-    width:100%;
-    color:#e9e9e9;
+    width: 100%;
+    color:#fafafa;
     padding: 0%;
     border-radius: 0px;
-    top: 10px;
+    top: 0px;
     left: 0px;
     text-align: center;
-    font-size: x-large;
+    font-size: 5em;
     display: inline-block;
     font-family: 'Montserrat', sans-serif;
+    height:3.7em;
+    margin: auto;
 }
 body {
     height:100%;
@@ -33,5 +42,14 @@ body {
 }
 p {
     font-family: 'Baloo 2', cursive;
-    font-size: 80%;
+    font-size: 1.6em;
+    text-indent: 4ch;
+    margin-left: 1ch;
+}
+h2 {
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 2ch;
+    color:whitesmoke;
+    text-align: center;
+    font-size:3em;
 }
