--- a/style.css
+++ b/style.css
@@ -3,38 +3,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 .top {
     position: fixed;
-    background-color:#303030;
-    width: 100%;
+    width: 97%;
     color:#fafafa;
     padding: 0%;
-    border-radius: 0px;
     top: 0px;
-    left: 0px;
+    left: 1.5%;
+    text-align: center;
+    font-size: 1.6em;
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    height:4em;
+    margin: 0 auto;
+    background-color: #505050;
+    border-radius: 1.5ch;
+}
+.roof {
+    z-index:-1;
+    position:relative;
+    width: 95%;
+    color:#fafafa;
+    padding: 0%;
+    top: 0px;
+    left: 2.5%;
     text-align: center;
     font-size: 5em;
     display: inline-block;
-    font-family: 'Montserrat', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     height:4em;
-    margin: auto;
+    margin: 0 auto;
+    background-color: #505050;
+    border-radius: 0 0 .75ch .75ch;
+    background-image: url(codebkr.png)
 }
 .centertext {
     top: 25%;
     transform: translateY(-25%);
 }
 .faketop {
-    width: 100%;
+    position: relative;
+    width: 97%;
     color:#fafafa;
     padding: 0%;
-    border-radius: 0px;
     top: 0px;
-    left: 0px;
+    left: 1.5%;
     text-align: center;
-    font-size: 5em;
+    font-size: 1.6em;
     display: inline-block;
-    font-family: 'Montserrat', sans-serif;
-    height:3.7em;
-    margin: auto;
-}
+    font-family: Arial, Helvetica, sans-serif;
+    height:3.65em;
+    margin: 0 auto;
+    border-radius: 1.5ch;}
 body {
     height:100%;
     background-color:#111111;
