--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
 .top {
     position: fixed;
     width: 97%;
@@ -70,4 +70,25 @@ h2 {
     color:whitesmoke;
     text-align: center;
     font-size:3em;
+}
+.footer {
+    position: fixed;
+    bottom: 3.5%;
+    color: #ffffff;
+    width: 100%;
+    height: 2ch;
+    padding-left:1%;
+    padding-top:1%;
+    font-size:170%;
+    font-weight:900;
+}
+.footerbg {
+    background-color:#202020;
+    position: fixed;
+    width: 100%;
+    height: 4ch;
+    bottom: 0px;
+    font-size:170%;
+    font-weight:900;
+    z-index:-1;
 }
