--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h2 {
 }
 .footer {
     position: fixed;
-    bottom: 3.5%;
+    bottom: 4.5%;
     color: #ffffff;
     width: 100%;
     height: 2ch;
@@ -81,6 +81,8 @@ h2 {
     padding-top:1%;
     font-size:170%;
     font-weight:900;
+    z-index:2;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .footerbg {
     background-color:#202020;
@@ -90,5 +92,5 @@ h2 {
     bottom: 0px;
     font-size:170%;
     font-weight:900;
-    z-index:-1;
+    z-index:1;
 }
