--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h2 {
     background-color:#202020;
     position: fixed;
     width: 100%;
-    height: 4ch;
+    height: 7%;
     bottom: 0px;
     font-size:170%;
     font-weight:900;
