--- a/style.css
+++ b/style.css
@@ -73,13 +73,13 @@ h2 {
 }
 .footer {
     position: fixed;
-    bottom: 4.5%;
+    bottom: 50px;
     color: #ffffff;
     width: 100%;
     height: 2ch;
-    padding-left:1%;
-    padding-top:1%;
-    font-size:170%;
+    padding-left:10px;
+    padding-top:10px;
+    font-size:xx-large;
     font-weight:900;
     z-index:2;
     font-family: Arial, Helvetica, sans-serif;
@@ -89,9 +89,23 @@ h2 {
     position: fixed;
     width: 100%;
     bottom: 0px;
-    font-size:170%;
+    font-size:xx-large;
     font-weight:900;
     z-index:1;
     font-family: Arial, Helvetica, sans-serif;
-    height: 7%;
+    height: 5rem;
+}
+.fakebg {
+    position: relative;
+    width: 100%;
+    bottom: 0px;
+    font-size:xx-large;
+    font-weight:900;
+    z-index:1;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 5rem;
+}
+img {
+    width: 1.23ch;
+    height:1.23ch;
 }
