--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     position:static;
 }
 body {
-    animation: 1s ease-out 0s 1 slideInFromLeft;
+    animation: 1s ease-out 0s 1 fadein;
     padding:0px;
     margin:0px;
     background-color:#262626;
@@ -25,7 +25,6 @@ button {
     margin-right:2ch;
     margin-bottom:2ch;
 }
-
 a {
     text-decoration:none;
     color:unset;
@@ -79,11 +78,34 @@ h1, h2, h3, h4, h5, h6 {
     color:white;
 }
 h1 {font-size:5ch; margin-top:1ch;}
-@keyframes slideInFromLeft {
+@keyframes fadein {
     0% {
         opacity: 0%;
     }
     100% {
         opacity: 100%;
     }
-  }
+}
+@keyframes textbounce {
+    0% {
+        transform:translate(0ch,0ch);
+        text-shadow: 0px 0px 0px #5d2424;
+    }
+    30% {
+        transform:translate(-0.2ch,0.2ch);
+        text-shadow: 0px 0px 0px #5d2424;
+    }
+    100% {
+        transform:translate(0ch,0ch);
+        text-shadow: -0.2ch 0.2ch 0px #5d2424;
+    }
+}
+.emphasis {
+    animation: 1s ease-out 0s 1 textbounce;
+    text-shadow: -0.2ch 0.2ch 0px #5d2424;
+    float:inherit;
+    font-size:10ch;
+}
+.texta {
+    text-align:center;
+}
